# CWebServer

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  README.md  about.html  config.h  file_handling.c  file_handling.h  handlers.c  handlers.h  html_helpers.c  html_helpers.h  logger.c  logger.h  main.c  main.cpp  main.h  responses.c  responses.h  socket_setup.c  socket_setup.h  utils.c  utils.h
.clwb/: .bazelproject
static/: main.js  style.css
